--- a/Hamster/Hamster.vcxproj.filters
+++ b/Hamster/Hamster.vcxproj.filters
@@ -133,16 +133,13 @@
     <Image Include="assets\leaderboard_button.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="assets\left_arrow_button.png">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="assets\longest_distance_leaderboard.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="assets\right_arrow_button.png">
+    <Image Include="assets\x_button.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="assets\x_button.png">
+    <Image Include="assets\direction_arrows.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
