--- a/Hamster/Hamster.vcxproj
+++ b/Hamster/Hamster.vcxproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\background.png" />
+    <Image Include="assets\direction_arrows.png" />
     <Image Include="assets\dustball.png" />
     <Image Include="assets\fastest_run_leaderboard.png" />
     <Image Include="assets\glass_cage.png" />
@@ -179,9 +180,7 @@
     <Image Include="assets\hamster_icon.png" />
     <Image Include="assets\house_foreground.png" />
     <Image Include="assets\leaderboard_button.png" />
-    <Image Include="assets\left_arrow_button.png" />
     <Image Include="assets\longest_distance_leaderboard.png" />
-    <Image Include="assets\right_arrow_button.png" />
     <Image Include="assets\settings_button.png" />
     <Image Include="assets\settings_menu.png" />
     <Image Include="assets\sound_button.png" />
